[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "mdformat_francium_custom"
author = "francium"
author-email = "francium@francium.cc"
description-file = "README.md"
home-page = "https://github.com/francium/mdformat-francium-custom"
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = "mdformat,markdown,markdown-it"

requires-python=">=3.6.1"
requires=["mdformat>=0.7.5,<0.8.0"]

[tool.flit.metadata.requires-extra]
test = [
    "pytest~=6.0",
    "coverage",
    "pytest-cov",
]

[tool.flit.entrypoints."mdformat.parser_extension"]
francium_custom = "mdformat_francium_custom"

[tool.flit.sdist]
include = []
exclude = [".github/", "tests/"]

[tool.isort]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true
# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["mdformat_francium_custom", "tests"]

# Settings for Black compatibility
profile = "black"
